Changed global styles and fonts

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -6,5 +6,8 @@
         "title": "Kokpit",
         "startGame": "Zacznij grę",
         "resumeGame": "Wznów grę"
+    },
+    "CharacterSelection": {
+        "title": "Wybór postaci do gry"
     }
 }
