Player selection finished

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -13,7 +13,11 @@
     },
     "CharacterSelection": {
         "title": "Wybór postaci do gry",
-        "playersAmount": "Łączna liczba graczy"
+        "playersAmount": "Łączna liczba graczy",
+        "confirm": "Potwierdź wybór"
+    },
+    "CharacterAssign": {
+        "title": "Przypisywanie postaci"
     },
     "Characters": {
         "lawyer": "Adwokat",
