Beginnings of assign view

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -17,7 +17,9 @@
         "confirm": "Potwierdź wybór"
     },
     "CharacterAssign": {
-        "title": "Przypisywanie postaci"
+        "title": "Przypisywanie postaci",
+        "clickToAssign": "Kliknij, aby przypisać",
+        "confirm": "Potwierdź wybór"
     },
     "Characters": {
         "lawyer": "Adwokat",
