Default assignment changed and segments added to info modal

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -42,6 +42,10 @@
     "CharacterList": {
         "title": "Lista postaci w grze"
     },
+    "PlayerInfo" : {
+        "info": "Informacje",
+        "action": "Akcje"
+    },
     "UserManage": {
         "title": "Zarządzanie użytkownikami",
         "add": "Dodaj"
