Toolbar actions modifications

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -17,7 +17,7 @@
         "title": "Wybór postaci do gry",
         "playersAmount": "Łączna liczba graczy",
         "confirm": "Potwierdź wybór",
-        "reset": "Resetuj"
+        "reset": "Resetuj graczy"
     },
     "CharacterAssign": {
         "title": "Przypisywanie postaci",
