Added history for full moon

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -62,6 +62,11 @@
         "title": "Zarządzanie użytkownikami",
         "add": "Dodaj"
     },
+    "History": {
+        "title": "Historia akcji",
+        "noData": "Brak akcji do wyświetlenia",
+        "fullMoonMessage": "Rozpoczęcie pełni księżyca"
+    },
     "Fractions": {
         "TK": "Town Killing",
         "TI": "Town Investigate",
