Fixed player info modal label and changed voting

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -5,7 +5,7 @@
         "mafia": "Mafia",
         "neutrals": "Neurtalni",
         "cits": "Cywile",
-        "players": "Postaci",
+        "players": "Postacie",
         "game": "Gra",
         "history": "Historia",
         "yes": "Tak",
@@ -75,7 +75,12 @@
     },
     "Voting": {
         "title": "Głosowanie",
-        "endVoting": "Zakończ głosowanie",
+        "reset": "Resetuj",
+        "endVoting": "Zakończ",
+        "guilty": "Winny / niewinny",
+        "guiltyTitle": "Szafot - {{name}}",
+        "makeGuiltyConfirm": "Czy na pewno chcesz postawić {{name}} na szafot?",
+        "resetVotingConfirm": "Czy na pewno chcesz zresetować obecne głosowanie?",
         "endVotingSuccess": "Pomyślnie zakończono głosowanie!",
         "endVotingConfirm": "Czy na pewno chcesz zakończyć głosowanie bez powieszenia żadnego z graczy?",
         "hangPlayer": "Powieś gracza",
