Added swipe touch

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -93,7 +93,9 @@
     "NightActions": {
         "title": "Akcje nocne",
         "next": "Dalej",
-        "endActions": "Zakończ akcje"
+        "endActions": "Zakończ akcje",
+        "info": "Informacje",
+        "action": "Akcje"
     },
     "Fractions": {
         "TK": "Town Killing",
